--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -54,8 +54,22 @@ nav#menu li {
     background-color: #dddddd;
     padding: 10px;
     margin: 2px;
+    transition: 1s;
+}
+
+nav#menu li:hover {
+    background-color: #606060;
 }
 
 nav#menu h1 {
     display: none;
+}
+
+nav#menu a {
+    text-decoration: none;
+    color: #000000;
+}
+
+nav#menu a:hover {
+    color: #ffffff;
 }
