melhoria CCS3 do audio e videos multimidia e index

--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -238,3 +238,13 @@ footer#rodape {
 footer#rodape p {
     text-align: center;
 }
+
+/* Videos do index */
+
+video#baixo {
+    width: 500px;
+}
+
+video#lateral {
+    width: 350px;
+}
